# biotac_force_net

./: .gitignore  CMakeLists.txt  README.md  README.org  package.xml
config/: bt_ft.rviz
launch/: ft_bt_transform.launch
scripts/: bt_voxel_viz.py  conf_force_inference.py  force_inference.py  ft_record_server.py  pdc_contact.py  train_dropout_force_network.py  train_force_network.py  transform_ft_bt.py
scripts/data_loader/: biotac_pos.py  biotac_process.py  data_logger.py  data_prep.py  force_dataset_loader.py  ft_collection.py  get_processed_training_data.py  read_processed_npy.py
scripts/models/: ICRA19.py  ScaledForceProjLS.py  base_biotac_class.py  multiDropoutModel.py
srv/: RecordData.srv  StoreData.srv
tf_models/force_2019_4_26/momentum/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
tf_models/icra19/momentum/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
tf_models/ll4ma_lab/momentum/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
tf_models/ll4ma_lab_dropout/momentum/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
