<?xml version="1.0"?>
<package format="2">
  <name>biotac_force_net</name>
  <version>0.0.0</version>
  <description>The biotac_force_net package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bala@cs.utah.edu">bala</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>biotac_sensors</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend> mesage_generation </build_depend>
  <build_export_depend>biotac_sensors</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>biotac_sensors</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime </exec_depend>

</package>
